--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobileStyle.css">
     <script src="script/video.js"></script>
 </head>
 <body>
-
+<div class="fatherContents">
 <div id="zmul">
     <div id="zmul-text3">mel en des. go ar &#58;&#41;&#41;&#41;</div>
     <div id="zmul-logo">
@@ -35,6 +36,7 @@
         <button id="play-btn">PLAY</button>
         <!--<div id="play-bck"></div>-->
     </div>
+</div>
 </div>
 
 <audio src="media/audio/zmul.mp3" autoplay></audio>
