--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <link rel="stylesheet" href="mobileStyle.css">
     <script src="script/video.js"></script>
     <script src="script/music.js"></script>
+    <script src="script/passwordMask.js"></script>
 </head>
 <body>
 <div id="ProcedureContent">
     <div id="PC-box">
-        <p>Wanna play?</p>
+        <h5>Wanna play?</h5>
         <button id="PC-button">Yes.</button>
+        <p>Please before enter to the site, read the instructions <a href="./instructions.html" target="_blank">here.</a></p>
     </div>
 </div>
 
@@ -36,7 +38,8 @@
 
     <div id="password">
         <p>Pass:</p>
-        <input type="text" id="password-input" name="password" required>
+        <input type="text" id="password-input" name="password" maxlength="11" oninput="passwordMasking()" required>
+        <div id="contentMask"></div>
     </div>
 
     <div id="play">
